pic from Stefano

--- a/report/BPEL.tex
+++ b/report/BPEL.tex
@@ -43,8 +43,8 @@ BPEL processes need to communicate with each other and for this purpose they usu
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=125mm]{pictures/image-BPEL.pdf}
-\caption{ Execution of a simple BPEL Process \textbf{FIXME(To Realize with UML Deployment Diagram)}}
+\includegraphics[width=125mm]{pictures/deployment.jpeg}
+\caption{ Deployment diagram of a simple BPEL Process}
 \label{BPELprocess}
 \end{center}
 \end{figure}
