--- a/report/Discussion.tex
+++ b/report/Discussion.tex
@@ -42,7 +42,7 @@ As an example of how to use our transformation, we discuss in this Subsection ho
 \begin{figure}
   \begin{center}
     \includegraphics[scale=1.2]{pictures/UseCaseExampleBPELOrchestr.png}
-    \caption{The example of a BPEL orchestration model we input to our generator. A client uses a very simple service that, given a surname of a famous person, gives back the autograph.}
+    \caption{The BPEL orchestration model we input to our generator. A client uses a very simple service that, given a surname of a famous person, replies back the autograph.}
     \label{fig:BPELOrchestr}
   \end{center}
 \end{figure}
