--- a/report/MethodologicalApproach.tex
+++ b/report/MethodologicalApproach.tex
@@ -23,24 +23,24 @@ Once these steps have been accomplished, we focus on providing more details on h
 In our transformation we are dealing with BPEL, which is a DSL (Domain Specific Language), and Java, which is a multipurpose language. 
 Having to work with a model produced with a DSL means that we don't have to take care of the general constructs and ideas that are present in a generic language. The language is already skimmed to contain what is necessary to orchestrate business processes.
 Concerning the output language, Java, it is not a DSL but a multipurpose language. Thus, it has no constraints on which kind of process or solution we could implement with it. %Most importantly, the fact the input model is produced in a DSL  
- 
+
 \subsection{The methodological approach}
 \label{sec:ProgrammingVsMDE}
-To realize the transformation, many possibilities arise; from a very specific, custom solution to a more broad and abstract approach. The possibilities could be generalized in three main families: a manual ad-hoc programming solution, a code generation automation or a model driven architecture abstraction
+To realize the transformation, many possibilities arise; from a very specific, custom solution, to a more broad and abstract approach. The possibilities could be generalized in three main families: a manual ad-hoc programming solution, a code generation automation or a model driven architecture abstraction.
   \subsubsection{Ad-hoc Programming solution}
-The programming solution would create an ad-hoc solution for our purpose.  At the same time, as our purpose is to provide a proof of concept for our approach more than a runnable application, programming a one time, ready to deploy solution, does not fid our needs.
+The programming solution would create an ad-hoc solution for our purpose. With this technique we would obtain a runnable, ready to deploy, solution. Though, as our aim is to provide a proof of concept for our approach, generating the code automatically, the focus on programming does not fit our needs.
   \subsubsection{Code Generation}
-This solution is aimed at automatizing the generation of code that would otherwise have to be written by hand. It concerns the creation of models/templates that will be later transformed in working code by an additional application. Although this solution might partially fit our need of an automated generation, we might have to create models/templates for many components, and we have to take into account a possible large amount of similar portions of code needed in different parts of the final application.  Thus, we need a solution that will rise of one more step the abstraction.
+This solution is aimed at automatizing the generation of code that would otherwise have to be written by hand. It concerns the creation of models/templates that will be later transformed in working code by an additional application. Although this solution might partially fit our need of an automated generation, we might have to create models/templates for many components, and we have to take into account a possible large amount of similar portions of code needed in different parts of the final application.  Thus, we need a solution that will rise of one more step the abstraction, where hierarchies and other software engineering concepts could be taken into consideration.
   
  \subsubsection{Model Driven Architecture (MDA) Abstraction}
-The MDA aims, as well as the Code Generation automation, at the creation of models to be later transformed in runnable code (see Section \ref{MDA}). The difference lies in the fact that MDA permits to create an architecture where we could actually specify generic transformations strategies. For example, instead of creating a template for any BPEL construct, with MDA we could create a hierarchy of templates where similar BPEL constructs are sharing part of the code minimizing the quantity of hand written code at the price of a longer design phase.
+The MDA aims, as well as the Code Generation automation, at the creation of models to be later transformed in runnable code (see Section \ref{MDA}). The difference lies in the fact that MDA permits to create an architecture where we could actually specify generic transformation strategies. For example, instead of creating a template for any BPEL construct, with MDA we could create a hierarchy of templates where similar BPEL constructs are sharing part of the code minimizing the quantity of hand written code at the price of a longer design phase.
 \subsubsection{The proposed methodological approach}
-Given the fact that our transformation has the purpose of showing the feasibility of such a transformation form BPEL to Java, we have to take into account that only a small part of the BPEL language can be taken into account. Moreover, we want to propose a possibly expandable design for such a transformation. Last but not least, we have to keep an eye on possible future developments. For these reasons, we decided to use a Model Driven Architecture methodology.
+Given the fact that our transformation has the purpose of showing the feasibility of a semi-automated transformation from BPEL to Java, we have to take into account that only a small part of the BPEL language can be considered. This implies that we have to propose a possibly expandable design for such a transformation, in case the BPEL subset would be enlarged. Last but not least, we have to keep an eye on possible future developments and improvements of the transformation itself. For these reasons, we decided to use a Model Driven Architecture methodology.
 
 \subsection{Specific MDA approach: Template based Model-to-Text}
 \label{sec:M2TApproach}
 Once the MDA approach has been chosen, we have to choose which kind of model transformation we want to apply. As discussed in Section \ref{m2m&m2t}, there are two kinds of transformations: Model-to-Model and Model-to-Text. As we need a Java code output, the choice falls on the Model-to-Text type.
-Moreover, Model-to-Text also has two variants: visitor or template based. As discussed in Section \ref{m2m&m2t}, the visitor-based technique focus on traversing the input model's code and directly write text as output. While this technique would prove useful in case the translation could be carried out just as a sequence of steps, this is not true in the case of a BPEL to Java transformation. The structures of the BPEL model, which acts as an orchestrator of components, opposed to the Java object oriented application we wish to have as output, suggests us we have to able to get values and parameters from several places of the input model. Thus, the template-based transformation fits our needs at best.
+Furthermore, Model-to-Text has itself two variants: visitor or template based. As discussed in Section \ref{m2m&m2t}, the visitor-based technique focus on traversing the input model's code and directly write text as output. While this technique would prove useful in case the translation could be carried out just as a sequence of steps, this is not true in the case of a BPEL to Java transformation. The structure of the BPEL model, which acts as an orchestrator of components, opposed to the Java object oriented application we wish to have as output, suggests we must be able to get values and parameters from several places of the input model. Thus, the template-based transformation fits our needs at best.
 
 \subsection{Overview of the methodological approach}
 \label{MethodologyOverview}
@@ -52,9 +52,9 @@ Once defined the methodology to be applied, we can sketch, as represented in Fig
     \label{fig:TransformationApproach}
   \end{center}
 \end{figure}
-On the upper part of the picture there are represented the inputs we have to provide in order to start the transformation. Namely, on the upper left there are represented the BPEL model of the process we want to transform in a Java application and the BPEL meta-model that will allow the parameterization of the elements. 
-On the upper right there are the Java templates which define the structure of the final application. It is here that we define the hierarchy of objects and the inheritance strategies. It these templates we also determine where the dynamic elements taken from the BPEL model should be placed.  
-In the center, we have the Model-to-text generator. This component will mash the information from the parameterized input model with the Java templates to finally output a runnable Java application. This output application, written in Java code (represented at the bottom) should be able to mimic the orchestration logic played by the BPEL process given as input.  
+On the upper part of the picture there are represented the inputs we have to provide in order to start the transformation. Namely, on the upper left there are represented the BPEL model of the process we want to transform in a Java application and the BPEL meta-model that will allow the parameterization of the process' elements. 
+On the upper right there are the Java templates that define the structure of the final application. It is here that we define the hierarchy of objects and the inheritance strategies. It these templates we also determine where the dynamic elements taken from the BPEL model should be placed.  
+In the middle, we have the Model-to-text generator. This component will mash the information from the parameterized input model with the Java templates to finally output a runnable Java application. This output application, written in Java code (represented at the bottom) should be able to mimic the orchestration logic played by the BPEL process given as input.  
 Later in the report we also explain where and how the developer's intervention should be added on.
 
 
